--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nanda Alfiranda</title>
     <link rel="icon" type="image/svg+xml" href="./src/assets/luccy.png" />
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NandaAlfiranda</title>
+  </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
